--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -11,7 +11,7 @@ env:
   ECS_CLUSTER: Projet_MLops                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: Tache1 # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: mlops_catboostK           # set this to the name of the container in the
+  CONTAINER_NAME: latest           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 permissions:
